[gd_scene load_steps=7 format=2]

[ext_resource path="res://Environment.gd" type="Script" id=1]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 5 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.347305 )
colors = PoolColorArray( 0.996094, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 20

[node name="Environment" type="Node2D"]
script = ExtResource( 1 )

[node name="Anchor" type="StaticBody2D" parent="."]
position = Vector2( 160, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor"]
shape = SubResource( 1 )
disabled = true

[node name="PinJoint2D" type="PinJoint2D" parent="Anchor"]
node_a = NodePath("..")
node_b = NodePath("RigidBody2D")

[node name="RigidBody2D" type="RigidBody2D" parent="Anchor/PinJoint2D"]
position = Vector2( 0, 5 )
mass = 0.04
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor/PinJoint2D/RigidBody2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Anchor/PinJoint2D/RigidBody2D"]
position = Vector2( 0, 50 )
texture = SubResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 10, 100 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01

[node name="ObservationLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 23.0
margin_right = 41.0
margin_bottom = 37.0
size_flags_horizontal = 4
text = "Observation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Action:"

[node name="RewardLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 46.0
margin_right = 41.0
margin_bottom = 60.0
size_flags_horizontal = 4
text = "Reward: "

[node name="TimeLabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 66.0
margin_right = 42.0
margin_bottom = 80.0
size_flags_horizontal = 4
text = "Time:"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
